c0/freenodes
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/freenodes/src/proof.c:547:6: error: expected expression
if ( struct node ) 
     ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/freenodes/src/obj/proof.o] Error 1
